chore: Updated .gitgnore.
Signed-off-by: scottxu <scottxu@scottxublog.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ bundle/installer-macos.generated.pkgproj
 bundle/LICENSE.txt
 bundle/macOS/Plugin-Info.plist
 installer/LICENSE
-build/
+build*/
 release/
