--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 rtspoutput.rc
 resource.h
 bundle/installer-macos.generated.pkgproj
+bundle/installer-macos.pkgproj
 bundle/LICENSE.txt
 bundle/macOS/Plugin-Info.plist
 installer/LICENSE
