--- a/rtsp-server/CMakeLists.txt
+++ b/rtsp-server/CMakeLists.txt
@@ -3,7 +3,7 @@ project(rtsp-server)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-include_directories("3rdpart")
+include_directories("3rdpart/libb64/libb64/include")
 add_subdirectory(3rdpart/libb64)
 
 file(GLOB rtsp-server_net_SOURCES
