--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,15 +36,14 @@ jobs:
       latest_created_at: ${{ steps.latest_release.outputs.created_at }}
       latest_published_at: ${{ steps.latest_release.outputs.published_at }}
     steps:
-      - name: Get v27.2.4 release info
+      - name: Get latest release info
         id: latest_release
         uses: kaliber5/action-get-release@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           owner: 'obsproject'
           repo: 'obs-studio'
-          tag_name: '27.2.4'
-          #latest: true
+          latest: true
           
   get_plugin_info:
     name: '01 - Get plugin git info'
