build: Updated build scripts to fit OBS 28.
Signed-off-by: scottxu <scottxu@scottxublog.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,16 @@ on:
 
 env:
   PRODUCT_NAME: 'obs-rtspserver'
-  DEPS_VERSION_MAC: '2022-02-13'
-  DEPS_HASH_MAC: '77471b1d345a768e8efec3f6ad9dc79f3c7cd34840b66f721b80025d29713f5d'
+  DEPS_VERSION_MAC: '2022-08-02'
+  DEPS_HASH_MAC: 'de057e73e6fe0825664c258ca2dd6798c41ae580bf4d896e1647676a4941934a'
   #QT_VERSION_MAC: '2022-02-13'
-  QT_HASH_MAC: '13fbcc45fd9d08b30e702d481fe4d58b23f93aa06848cede4ebe0956c79a5e8a'
-  DEPS_VERSION_WIN: '2022-02-13'
-  QT_VERSION_WIN: '5.15.2'
+  QT_HASH_MAC: '252e6684f43ab9c6f262c73af739e2296ce391b998da2c4ee04c254aaa07db18'
+  DEPS_VERSION_WIN: '2022-08-02'
+  DEPS_X64_HASH_WIN: '2192d8ce780c4281b807cd457994963669e5202659ecd92f19b54c3e7d0c1915'
+  DEPS_X86_HASH_WIN: '9f8582ab5891b000869d6484ea591add9fbac9f1c91b56c7b85fdfd56a261c1b'
+  QT_X64_HASH_WIN: 'e5509b54196a3f935250cc4b9c54160c8e588fd0f92bc078a2a64f9d9e2e4e93'
+  QT_X86_HASH_WIN: '24fc03bef153a0e027c1479e42eb08097a4ea1d70a4710825be0783d0626cb0d'
+  #QT_VERSION_WIN: '5.15.2'
   NSIS_VERSION_WIN: '3.08'
 jobs:
   get_obs_info:
