--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,9 @@ set(MACOS_BUNDLEID "com.scottxu.obs-rtspserver")
 set(OBS_PLUGIN_OBS_SOURCE_DIR ${CMAKE_SOURCE_DIR})
 set(OBS_FRONTEND_API_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/UI/obs-frontend-api")
 
-if (NOT COMMAND install_obs_plugin_with_data)
+add_library(${CMAKE_PROJECT_NAME} MODULE)
+
+if (NOT COMMAND setup_plugin_target)
     include(external/BuildHelper.cmake)
 endif()
 
@@ -21,9 +23,8 @@ add_subdirectory(rtsp-server)
 if(CMAKE_VERSION VERSION_LESS "3.7.0")
     set(CMAKE_INCLUDE_CURRENT_DIR ON)
 endif()
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTOUIC ON)
-find_package(Qt6 COMPONENTS Core Widgets REQUIRED)
+#set(CMAKE_AUTOMOC ON)
+#set(CMAKE_AUTOUIC ON)
 
 set(OBS_RTSPSERVER_SOURCES
 	rtsp_main.cpp
@@ -39,23 +40,27 @@ set(OBS_RTSPSERVER_HEADERS
 	rtsp_output_helper.h
 	)
 
-add_library(obs-rtspserver MODULE
+find_qt(COMPONENTS Widgets Core)
+
+set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON)
+
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE
 	${OBS_RTSPSERVER_SOURCES}
 	${OBS_RTSPSERVER_HEADERS})
 	
-target_include_directories(obs-rtspserver PRIVATE
-	${Qt5Core_INCLUDES}
-	${Qt5Widgets_INCLUDES}
+target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
+	${Qt6Core_INCLUDES}
+	${Qt6Widgets_INCLUDES}
 	${OBS_FRONTEND_API_INCLUDE_DIRS}
 	${LIBOBS_INCLUDE_DIRS}
 	"rtsp-server")
 
-target_link_libraries(obs-rtspserver PRIVATE
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
 	rtsp-server
 	obs-frontend-api
 	libobs
-	Qt6::Core
-	Qt6::Widgets)
+	Qt::Core
+	Qt::Widgets)
 
 add_definitions(-DVERSION_STRING="${OBS_PLUGUIN_VERSION}")
 		
@@ -64,17 +69,17 @@ if(WIN32)
 endif()
 
 if(APPLE)
-	set_target_properties(obs-rtspserver
+	set_target_properties(${CMAKE_PROJECT_NAME}
 			PROPERTIES
 			FOLDER "plugins"
 			PRODUCTNAME "OBS RTSP Server Plugin")
 else()
-	set_target_properties(obs-rtspserver
+	set_target_properties(${CMAKE_PROJECT_NAME}
 			PROPERTIES
 			FOLDER "plugins"
 			VERSION "${OBS_PLUGUIN_VERSION}"
 			PRODUCTNAME "OBS RTSP Server Plugin")
 endif()
 
-install_obs_plugin_with_data(obs-rtspserver data)
+setup_plugin_target(${CMAKE_PROJECT_NAME})
 
