style: Adjusted folder structure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,28 @@ set(OBS_RTSPSERVER_HEADERS
 	rtsp_output_helper.h
 	)
 
+ file(GLOB OBS_RTSPSERVER_UI_SOURCES
+	ui/*.cpp)
+
+file(GLOB OBS_RTSPSERVER_MAIN_SOURCES
+	*.cpp)
+
+set(OBS_RTSPSERVER_SOURCES
+	${OBS_RTSPSERVER_UI_SOURCES}
+	${OBS_RTSPSERVER_MAIN_SOURCES}
+	)
+
+file(GLOB OBS_RTSPSERVER_UI_HEADERS
+	ui/*.hpp)
+
+file(GLOB OBS_RTSPSERVER_MAIN_HEADERS
+	*.h)
+
+set(OBS_RTSPSERVER_HEADERS
+	${OBS_RTSPSERVER_UI_HEADERS}
+	${OBS_RTSPSERVER_MAIN_HEADERS}
+	)
+
 set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY C_STANDARD 17)
 
@@ -56,8 +78,6 @@ if(WIN32)
 endif()
 	
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
-	${Qt6Core_INCLUDES}
-	${Qt6Widgets_INCLUDES}
 	${OBS_FRONTEND_API_INCLUDE_DIRS}
 	${LIBOBS_INCLUDE_DIRS}
 	"rtsp-server")
