Replace CMAKE_PROJECT_NAME with PROJECT_NAME
As of CMake 3.12 the variable CMAKE_PROJECT_NAME refers to the top level
project name, which is obs-studio instead of obs-rtspserver in our case

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(MACOS_BUNDLEID "com.scottxu.obs-rtspserver")
 set(OBS_PLUGIN_OBS_SOURCE_DIR ${CMAKE_SOURCE_DIR})
 set(OBS_FRONTEND_API_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/UI/obs-frontend-api")
 
-add_library(${CMAKE_PROJECT_NAME} MODULE)
+add_library(${PROJECT_NAME} MODULE)
 
 if (NOT COMMAND setup_plugin_target)
     include(external/BuildHelper.cmake)
@@ -61,28 +61,28 @@ set(OBS_RTSPSERVER_HEADERS
 	${OBS_RTSPSERVER_MAIN_HEADERS}
 	)
 
-set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY CXX_STANDARD 17)
-set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY C_STANDARD 17)
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
+set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 17)
 
 find_qt(COMPONENTS Widgets Core)
 
-set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON)
+set_target_properties(${PROJECT_NAME} PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON)
 
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE
+target_sources(${PROJECT_NAME} PRIVATE
 	${OBS_RTSPSERVER_SOURCES}
 	${OBS_RTSPSERVER_HEADERS})
 
 if(WIN32)
 	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/rtspoutput.rc.in ${CMAKE_CURRENT_SOURCE_DIR}/rtspoutput.rc)
-	target_sources(${CMAKE_PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/rtspoutput.rc)
+	target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/rtspoutput.rc)
 endif()
 	
-target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
+target_include_directories(${PROJECT_NAME} PRIVATE
 	${OBS_FRONTEND_API_INCLUDE_DIRS}
 	${LIBOBS_INCLUDE_DIRS}
 	"rtsp-server")
 
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
+target_link_libraries(${PROJECT_NAME} PRIVATE
 	rtsp-server
 	obs-frontend-api
 	libobs
@@ -92,17 +92,17 @@ target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
 add_definitions(-DVERSION_STRING="${OBS_PLUGUIN_VERSION}")
 
 if(APPLE)
-	set_target_properties(${CMAKE_PROJECT_NAME}
+	set_target_properties(${PROJECT_NAME}
 			PROPERTIES
 			FOLDER "plugins"
 			PRODUCTNAME "OBS RTSP Server Plugin")
 else()
-	set_target_properties(${CMAKE_PROJECT_NAME}
+	set_target_properties(${PROJECT_NAME}
 			PROPERTIES
 			FOLDER "plugins"
 			VERSION "${OBS_PLUGUIN_VERSION}"
 			PRODUCTNAME "OBS RTSP Server Plugin")
 endif()
 
-setup_plugin_target(${CMAKE_PROJECT_NAME})
+setup_plugin_target(${PROJECT_NAME})
 
