--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -415,14 +415,14 @@ jobs:
     #      asset_content_type: application/vnd.debian.binary-package
     #      github_token: ${{ secrets.GITHUB_TOKEN }}
 
-    #  - name: 'Upload linux qt6 .rpm artifact to release'
-    #    uses: shogo82148/actions-upload-release-asset@v1
-    #    with:
-    #      upload_url: ${{ steps.create_release.outputs.upload_url }}
-    #      asset_path: ${{ github.workspace }}/${{ env.PRODUCT_NAME }}-linux-ubuntu-20.04/obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag_name }}-linux.rpm
-    #      asset_name: obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag_name }}-linux-qt6.rpm
-    #      asset_content_type: application/vnd.debian.binary-package
-    #      github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: 'Upload linux qt6 .rpm artifact to release'
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ github.workspace }}/${{ env.PRODUCT_NAME }}-linux-ubuntu-22.04/obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag_name }}-linux.rpm
+          asset_name: obs-rtspserver-${{ needs.get_plugin_info.outputs.git_tag_name }}-linux-qt6.rpm
+          asset_content_type: application/vnd.debian.binary-package
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 'Upload macos universal .zip artifact to release'
         uses: shogo82148/actions-upload-release-asset@v1
