build(rtsp-server): Adjusted the reference method of libb64 library.
Signed-off-by: scottxu <scottxu@scottxublog.com>

--- a/rtsp-server/3rdpart/libb64/CMakeLists.txt
+++ b/rtsp-server/3rdpart/libb64/CMakeLists.txt
@@ -3,7 +3,8 @@ project(libb64)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-include_directories("libb64/include")
+
+include_directories(libb64/include/)
 
 file(GLOB libb64_SOURCES
 	libb64/src/*.c)
@@ -14,3 +15,5 @@ file(GLOB libb64_HEADERS
 add_library(libb64 STATIC
 	${libb64_SOURCES}
 	${libb64_HEADERS})
+
+target_include_directories(libb64 INTERFACE libb64/include/)
